--- a/Sections/Section10_Node_NPM_Express_MongoDB/aula16/package.json
+++ b/Sections/Section10_Node_NPM_Express_MongoDB/aula16/package.json
@@ -15,10 +15,12 @@
     "connect-mongo": "^5.1.0",
     "core-js": "^3.41.0",
     "css-loader": "^7.1.2",
+    "csurf": "^1.10.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "helmet": "^8.1.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "regenerator-runtime": "^0.14.1",
